--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "better-docs": "^2.7.2",
     "dotenv": "^16.0.3",
     "electron": "^22.1.0",
+    "jsdoc": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
@@ -21,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
-    "electron": "wait-on tcp:$(grep PORT .env | cut -d '=' -f2) && electron ."
+    "electron": "wait-on tcp:$(grep PORT .env | cut -d '=' -f2) && electron .",
+    "docs": "jsdoc --configure jsdoc.conf.json --verbose"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "clean-jsdoc-theme": "^4.2.6",
     "concurrently": "^7.6.0",
     "wait-on": "^7.0.1"
   }
