--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "better-docs": "^2.7.2",
+    "blob": "^0.1.0",
     "dotenv": "^16.0.3",
-    "electron": "^22.1.0",
+    "electron": "^23.1.3",
+    "electron-dialog": "^2.0.0",
+    "fs": "^0.0.1-security",
     "jsdoc": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,5 +51,12 @@
     "clean-jsdoc-theme": "^4.2.6",
     "concurrently": "^7.6.0",
     "wait-on": "^7.0.1"
+  },
+  "build": {
+    "fileAssociations": [
+      {
+        "ext": "crdnl"
+      }
+    ]
   }
 }
