--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cardinal designs",
+  "name": "cardinal-designs",
   "version": "0.1.0",
   "private": true,
   "main": "src/main.js",
@@ -14,6 +14,7 @@
     "electron-dialog": "^2.0.0",
     "fs": "^0.0.1-security",
     "jsdoc": "^4.0.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
