added django backend for load/save functionality

--- a/crdnl/.env
+++ b/crdnl/.env
@@ -1,5 +1,6 @@
-# the default port to run the application
+# the default port to run the application and the backend
 PORT=3124
+BACKEND=4188
 
 # do we want DevTools open when we run the application? (true:1 , false:0)
 SHOW_DEV_TOOLS=1
